src/objects/Int_File_Control__c.object
<CustomObject>
    <description>Int File Control</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_DateTime_Extraction__c</fullName>
        <description>End Date Time Extraction</description>
        <label>End DateTime Extraction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>File Name</description>
        <label>File Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Total_1__c</fullName>
        <description>Hash Total 1</description>
        <label>Hash Total 1</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Total_2__c</fullName>
        <description>Hash Total 2</description>
        <label>Hash Total 2</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hash_Total_3__c</fullName>
        <description>Hash Total 3</description>
        <label>Hash Total 3</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Records__c</fullName>
        <description>Number of Records</description>
        <label>Number of Records</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System</description>
        <label>Source System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_DateTime_Extraction__c</fullName>
        <description>Start DateTime Extraction</description>
        <label>Start DateTime Extraction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Int File Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Committed__c</columns>
        <columns>Number_of_Records__c</columns>
        <columns>File_Name__c</columns>
        <columns>Start_DateTime_Extraction__c</columns>
        <columns>End_DateTime_Extraction__c</columns>
        <columns>Hash_Total_1__c</columns>
        <columns>Hash_Total_2__c</columns>
        <columns>Hash_Total_3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FCI-{0000000000}</displayFormat>
        <label>File Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Files Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>